--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5"
+        "php": ">=5.5",
+		"zendframework/zend-mail": "~2.5"
     },
     "autoload": {
         "psr-4": {
